--- a/frontend/src/components/ContentEditor/ContentEditor.module.scss
+++ b/frontend/src/components/ContentEditor/ContentEditor.module.scss
@@ -70,7 +70,7 @@
   flex-grow: 1;
   padding: 16px;
   border-radius: 4px;
-  overflow-y: scroll;
+  overflow-y: auto;
   scrollbar-color: #434343 #121212;
   display: flex;
   flex-direction: column;
