--- a/frontend/src/pages/admin-panel/admin-panel.module.scss
+++ b/frontend/src/pages/admin-panel/admin-panel.module.scss
@@ -1,12 +1,63 @@
+.route-form {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  gap: 15px;
+
+  input {
+    height: 50px;
+    border: 1px solid #666;
+    border-radius: 10px;
+    padding-left: 5px;
+  }
+
+  button {
+    height: 50px;
+    width: 150px;
+    border: 1px solid #666;
+    padding: 5px;
+  }
+}
+
+.routeItem {
+  display: flex;
+  gap: 15px;
+  input {
+    height: 50px;
+    border: 1px solid #666;
+    border-radius: 10px;
+    padding-left: 5px;
+  }
+}
+
 .admin {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   height: 100%;
 
+  &-routes {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    gap: 70px;
+    &-header {
+      font-size: 50px;
+      text-align: center;
+    }
+
+    &-list {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      height: 500px;
+      overflow-y: auto;
+      scrollbar-color: #434343 #121212;
+      padding: 20px;
+    }
+  }
+
   &-form {
-    border: 1px solid #666;
-    border-radius: 15px;
     width: 275px;
     padding-top: 15px;
     margin-right: auto;
