--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -1,10 +1,26 @@
 body,
 body * {
-  color: #fff;
+  color: #e0e0e0;
+  scrollbar-color: #434343 #121212;
 }
 
-input,
-button {
-  background-color: #121212;
-  color: #fff;
+::placeholder {
+  color: #a0a0a0;
+}
+
+:focus {
+  outline: none !important;
+}
+
+input {
+  border: 1px solid #2a2a2a;
+  background-color: #101114;
+}
+
+img {
+  cursor: pointer;
+}
+
+svg {
+  fill: #848692;
 }
