--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -2,6 +2,8 @@ body,
 body * {
   color: #e0e0e0;
   scrollbar-color: #434343 #121212;
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, Ubuntu,
+    "Helvetica Neue", sans-serif;
 }
 
 ::placeholder {
