--- a/frontend/src/components/MenuComponent/MenuComponent.module.scss
+++ b/frontend/src/components/MenuComponent/MenuComponent.module.scss
@@ -93,6 +93,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 5;
 
   &:hover {
     background-color: #1a1a1a;
