--- a/frontend/src/pages/AdminLoginPage/AdminLoginPage.module.scss
+++ b/frontend/src/pages/AdminLoginPage/AdminLoginPage.module.scss
@@ -69,6 +69,7 @@
       display: flex;
       flex-direction: column;
       gap: 5px;
+      margin-top: 20px;
       justify-content: center;
       align-items: center;
       padding-top: &-label {
