--- a/frontend/src/components/ContentEditor/ContentEditor.module.scss
+++ b/frontend/src/components/ContentEditor/ContentEditor.module.scss
@@ -7,6 +7,16 @@
   flex-direction: column;
   box-sizing: border-box;
 
+  @media (max-width: 768px) {
+    max-width: 95%;
+  }
+
+  &__text {
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
+    word-break: break-word;
+  }
+
   &__form {
     display: flex;
     align-items: center;
