--- a/frontend/src/components/MenuComponent/MenuComponent.module.scss
+++ b/frontend/src/components/MenuComponent/MenuComponent.module.scss
@@ -1,20 +1,47 @@
+.submenu {
+  margin-left: 16px;
+  width: auto;
+}
+
 .layoutContainer {
   display: flex;
   height: 100vh;
   background-color: #0d0e10;
   color: #fff;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+  }
+}
+
+.overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(2px);
+  z-index: 999;
+  @media (min-width: 769px) {
+    display: none;
+  }
 }
 
 .sidebar {
   white-space: nowrap;
   text-overflow: ellipsis;
-  background-color: #0d0e10;
+  position: fixed;
+  background-color: #0d0e10f0; // чуть прозрачнее
+  backdrop-filter: blur(6px); // можно и 10px
+  box-shadow: -4px 0 12px rgba(0, 0, 0, 0.6);
   width: 250px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  transition: width 0.3s;
-  position: relative;
+  transition: all 0.3s;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  transition: opacity 0.2s ease, transform 0.5s ease, width 0.5s ease;
+  z-index: 1000;
   border-right: 2px solid #131416;
 
   &.collapsed {
@@ -24,22 +51,51 @@
       display: none;
     }
   }
+
+  @media (max-width: 768px) {
+    width: 100%;
+    background-color: #0d0e10f0; // чуть прозрачнее
+    backdrop-filter: blur(6px); // можно и 10px
+    box-shadow: -4px 0 12px rgba(0, 0, 0, 0.6); // свет от правого края
+    max-height: 45vh;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: auto;
+    bottom: auto;
+    border-top: none;
+    border-left: 2px solid #131416;
+    transform: translateX(0);
+    transition: opacity 0.2s ease, transform 0.5s ease, width 0.5s ease;
+    z-index: 1000;
+
+    &.collapsed {
+      transform: translateX(100%);
+      overflow: hidden;
+    }
+  }
 }
 
 .menu {
   overflow-y: auto;
-  padding: 8px 0;
+  padding: 8px;
   overflow-x: hidden;
+
+  @media (max-width: 768px) {
+    padding: 16px;
+  }
 }
 
 .menuList {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
 .menuItem {
-  margin-bottom: 4px;
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
 }
 
 .menuLabel {
@@ -49,9 +105,10 @@
   align-items: center;
   cursor: pointer;
   transition: background-color 0.3s;
+  border-radius: 15px;
 
   &:hover {
-    background-color: #181616;
+    background-color: rgb(59, 55, 55);
   }
 
   &.active {
@@ -61,10 +118,16 @@
 
 .arrow {
   font-size: 12px;
-}
+  transition: transform 0.3s;
 
-.submenu {
-  padding-left: 24px;
+  @media (max-width: 768px) {
+    display: inline-block;
+    transform: rotate(180deg);
+  }
+
+  .sidebar.collapsed & {
+    transform: rotate(0deg);
+  }
 }
 
 .mainContent {
@@ -79,23 +142,59 @@
   overflow-y: auto;
 }
 
-.collapseButton {
+.collapseButtonMobile {
+  position: fixed;
+  top: 12px;
+  right: 12px;
+  width: 40px;
+  height: 40px;
+  z-index: 1100;
   background-color: transparent;
+  border: none;
+  color: #fff;
+  border-radius: 8px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #1a1a1a;
+  }
+
+  @media (max-width: 768px) {
+    display: flex;
+    &.collapseButtonMobile-collapsed {
+      display: none;
+    }
+  }
+}
+
+// Кнопка для десктопа (как раньше)
+.collapseButtonDesktop {
   position: absolute;
   right: -40px;
   top: 50%;
   transform: translateY(-50%);
   width: 40px;
   height: 75px;
+  background-color: transparent;
   border: none;
+  background-color: #0d0e10;
   color: #fff;
   border-radius: 0 4px 4px 0;
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 5;
+  cursor: pointer;
 
   &:hover {
     background-color: #1a1a1a;
+  }
+
+  @media (max-width: 768px) {
+    display: none;
   }
 }
