--- a/frontend/src/pages/AdminLoginPage/AdminLoginPage.module.scss
+++ b/frontend/src/pages/AdminLoginPage/AdminLoginPage.module.scss
@@ -5,6 +5,10 @@
   text-align: center;
   font-size: 30px;
   padding-top: 10px;
+
+  @media (max-width: 768px) {
+    font-size: 20px;
+  }
 }
 
 .route-form {
