--- a/frontend/src/pages/MainPage.tsx/MainPage.module.scss
+++ b/frontend/src/pages/MainPage.tsx/MainPage.module.scss
@@ -5,6 +5,10 @@
   text-align: center;
   font-size: 30px;
   padding-top: 10px;
+
+  @media (max-width: 768px) {
+    font-size: 20px;
+  }
 }
 
 .main__page {
@@ -17,4 +21,8 @@
   align-items: center;
   gap: 5px;
   font-size: 20px;
+
+  @media (max-width: 768px) {
+    font-size: 15px;
+  }
 }
