--- a/frontend/src/pages/MainPage.tsx/MainPage.module.scss
+++ b/frontend/src/pages/MainPage.tsx/MainPage.module.scss
@@ -1,5 +1,6 @@
 .header {
   height: 75px;
+  width: 100vw;
   border-bottom: 2px solid #131416;
   background-color: #101114;
   text-align: center;
