--- a/frontend/src/components/ContentDisplay/ContentDisplay.module.scss
+++ b/frontend/src/components/ContentDisplay/ContentDisplay.module.scss
@@ -1,64 +1,182 @@
-.content-display {
-  margin-top: 15px;
+.content-editor__textarea--edit {
+  white-space: pre-wrap !important;
+  overflow-wrap: break-word;
+  word-break: break-word;
+  overflow: auto;
+  text-overflow: initial;
+}
+
+.content-editor {
+  max-width: 80%;
+  margin: 0 auto;
+  height: 100%;
+  padding: 20px;
   display: flex;
   flex-direction: column;
-  gap: 16px;
-  overflow-y: auto;
-  position: relative;
-  align-items: center;
-  margin-bottom: 15px;
-}
-
-.content-display__loading,
-.content-display__error {
-  padding: 20px;
-  text-align: center;
-}
-
-.content-display__card {
-  background-color: #101114;
-  border: 1px solid #2a2a2a;
-  border-radius: 4px;
-  padding: 16px;
-  width: 80%;
   box-sizing: border-box;
 
   @media (max-width: 768px) {
     max-width: 95%;
   }
-}
 
-.content-display__text {
-  white-space: pre-wrap;
-  overflow-wrap: break-word;
-  word-break: break-word;
-}
+  &__flex {
+    display: flex;
+    flex-direction: row-reverse;
+    min-width: 100%;
+  }
 
-.content-display__media {
-  display: flex;
-  justify-content: center;
-}
+  &__images-row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 12px;
+    margin-top: 8px;
+  }
 
-.content-display__image {
-  max-width: 50%;
-  max-height: 400px;
-  border-radius: 4px;
-  object-fit: contain;
-  cursor: pointer;
-}
+  &__files-col {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
 
-.content-display__file {
-  color: #7eaaff;
-  text-decoration: none;
-  background-color: #101114;
-  padding: 8px;
-  border-radius: 4px;
-  display: inline-block;
-}
+  &__text {
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
+    word-break: break-word;
+  }
 
-.content-display__modal-image {
-  max-width: 100%;
-  max-height: 700px;
+  &__form {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 16px;
+  }
+
+  &__form-btn {
+    background: #101114;
+    border: 1px solid #2a2a2a;
+    border-radius: 6px;
+    width: 45px;
+    height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: 0.2s;
+
+    &:hover {
+      background: #666;
+    }
+  }
+
+  &__icon {
+    min-width: 20px;
+    min-height: 20px;
+  }
+
+  &__textarea {
+    flex: 1;
+    width: 100%;
+    min-height: 45px;
+    padding: 10px;
+    border: 1px solid #2a2a2a;
+    border-radius: 6px;
+    background: #101114;
+    color: #fff;
+    resize: none;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    &--error {
+      border-color: #992d22;
+    }
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  &__controls {
+    display: flex;
+    gap: 8px;
+  }
+
+  &__btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 6px;
+    transition: 0.2s;
+    width: 30px;
+    height: 30px;
+
+    &:hover {
+      background: #666;
+      border-radius: 4px;
+    }
+  }
+
+  &__list {
+    max-width: 80%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    overflow-y: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+  }
+
+  &__list-item {
+    display: flex;
+    background: #101114;
+    border: 1px solid #2a2a2a;
+    border-radius: 4px;
+    padding: 16px;
+  }
+
+  &__item-body {
+    flex: 1;
+  }
+
+  &__item-controls {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
+
+  &__media {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5px;
+
+    &-image {
+      max-width: 200px;
+      max-height: 200px;
+      width: auto;
+      height: auto;
+      object-fit: contain;
+      border-radius: 4px;
+      cursor: pointer;
+      background: inherit;
+    }
+
+    &-file {
+      color: #7eaaff;
+      text-decoration: none;
+    }
+  }
+
+  &__modal-image {
+    max-width: 100%;
+    max-height: 700px;
+  }
 }
 
 .header {
