--- a/frontend/src/components/ContentEditor/ContentEditor.module.scss
+++ b/frontend/src/components/ContentEditor/ContentEditor.module.scss
@@ -1,3 +1,11 @@
+.content-editor__textarea--edit {
+  white-space: pre-wrap !important;
+  overflow-wrap: break-word;
+  word-break: break-word;
+  overflow: auto;
+  text-overflow: initial;
+}
+
 .content-editor {
   max-width: 80%;
   margin: 0 auto;
@@ -7,8 +15,31 @@
   flex-direction: column;
   box-sizing: border-box;
 
+  &__attachments {
+    margin-bottom: 20px;
+  }
+
   @media (max-width: 768px) {
     max-width: 95%;
+  }
+
+  &__flex {
+    display: flex;
+    flex-direction: row-reverse;
+    min-width: 100%;
+  }
+
+  &__images-row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 12px;
+    margin-top: 8px;
+  }
+
+  &__files-col {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
   }
 
   &__text {
@@ -48,6 +79,7 @@
 
   &__textarea {
     flex: 1;
+    width: 100%;
     min-height: 45px;
     padding: 10px;
     border: 1px solid #2a2a2a;
@@ -102,23 +134,37 @@
   }
 
   &__list-item {
+    display: flex;
     background: #101114;
     border: 1px solid #2a2a2a;
     border-radius: 4px;
     padding: 16px;
   }
 
+  &__item-body {
+    flex: 1;
+  }
+
+  &__item-controls {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
+
   &__media {
     display: flex;
     justify-content: space-between;
-    margin-top: 12px;
+    margin-top: 5px;
 
     &-image {
-      max-width: 50%;
-      max-height: 400px;
-      border-radius: 4px;
+      max-width: 200px;
+      max-height: 200px;
+      width: auto;
+      height: auto;
       object-fit: contain;
+      border-radius: 4px;
       cursor: pointer;
+      background: inherit;
     }
 
     &-file {
